  - Each "industries" entry can either be a String (for industries without specified specials) or a sub-List (if adding specials as well)
  - See updated referenceSettings.json for detailed examples
* "entitiesAtStablePoints" can now also accept an empty entry (in place of "{}") to signify no entity in a given stable point.
* Updated MagicLib bounties:
  - Added a bounty against the Luddic Church, posted by the Adversary
  - Changed/reworked all ship variants in the Pirate and Hegemony bounties
  - Increased the reward for the Independent bounty
  - Note: these changes are in preparation of Starsector 0.96; more changes/adjustments will come after the 0.96 release.
* More code refactors



Version 3.2.1

* Fixed "isCoreWorldSystem" toggle doing the complete opposite (e.g. tagging the Optimal system as a proc-gen system and not a Core World system).



Version 3.2.0

* Updated LunaLib compatibility yet again (now with an actual changelog!)
  - Note that setting IDs have been changed, so you may need to set your LunaLib settings for this mod again.
* Added "hasSystemwideNebula" toggle for custom star systems, allowing for nebula clouds to appear in your custom star systems.
  - The default uninhabited system now has this set to "true".
* Custom star systems created with "setLocation" now set their star age to that of their selected constellation.
  - This affects the nebula color if the system's "hasSystemwideNebula" is set to "true".
* Stars in the "stars" list of "starsInSystemCenter" can now have "specChanges" as well.
* Fixed optional blueprint stealer setting not correctly resetting the elapsed months after each steal attempt.
* Exotica Technologies:
  - Updated the Adversary faction with the latest exotics and upgrades
  - Decreased chance for faction-exclusive exotics and upgrades to appear in Adversary ships
* Major code refactors



Version 3.1.0

* Updated LunaLib compatibility: