@@ -36,30 +36,33 @@
 			"setLocation":1, # 1st closest constellation to Core Worlds
 			"systemBackground":"background6.jpg",
 			"systemMusic":"music_diktat_market_hostile",
-			"fringeJumpPoint":{"orbitRadius":9000},
+			"fringeJumpPoint":{"orbitRadius":8410},
 			"starsInSystemCenter":{
 				"stars":[
 					{	"name":"Optimal",
 						"type":"star_blue_giant",
 						"radius":1100,
-						"coronaRadius":500,
+						"coronaRadius":1100,
+						"flareChance":0.0,
 					},
 					{	"name":"Zenith",
 						"type":"star_yellow",
 						"radius":800,
-						"coronaRadius":400,
+						"coronaRadius":800,
+						"flareChance":0.0,
 					},
 					{	"name":"Pinnacle",
 						"type":"star_orange",
 						"radius":650,
-						"coronaRadius":400,
+						"coronaRadius":650,
+						"flareChance":0.0,
 					},
 				],
-				"orbitRadius":1600,
+				"orbitRadius":1850,
 			},
 			"orbitingBodies":[
 				{	"type":"gas_giant",
-					"orbitRadius":4750,
+					"orbitRadius":5170,
 					"radius":250,
 					"conditions":[
 						"volatiles_plentiful",
@@ -87,9 +90,9 @@
 					],
 				},
 				{	"type":"toxic",
-					"orbitRadius":700,
+					"orbitRadius":625,
 					"focus":1,
-					"radius":100,
+					"radius":75,
 					"conditions":[
 						"rare_ore_ultrarich",
 						"ore_ultrarich",
@@ -114,9 +117,9 @@
 					],
 				},
 				{	"type":"barren-bombarded",
-					"orbitRadius":1170,
+					"orbitRadius":1060,
 					"focus":1,
-					"radius":90,
+					"radius":60,
 					"conditions":[
 						"rare_ore_moderate",
 						"ore_ultrarich",
@@ -140,7 +143,7 @@
 					],
 				},
 				{	"type":"terran",
-					"orbitRadius":6700,
+					"orbitRadius":6770,
 					"radius":130,
 					"conditions":[
 						"ruins_vast",
@@ -172,7 +175,7 @@
 					],
 				},
 				{	"type":"water",
-					"orbitRadius":7600,
+					"orbitRadius":7380,
 					"radius":130,
 					"conditions":[
 						"water_surface",
@@ -189,7 +192,7 @@
 			],
 			"systemFeatures":[
 				{	"type":"asteroid_belt",
-					"orbitRadius":8300,
+					"orbitRadius":7960,
 					"name":"Ring of Despair",
 					"innerBandIndex":1,
 					"outerBandIndex":3,
@@ -201,7 +204,7 @@
 					"bandIndex":3,
 				},
 				# An abandoned mining station in the asteroid belt
-				#{"type":"station","orbitRadius":8350,"name":"Abandoned Mining Station","stationType":"station_mining00"},
+				#{"type":"station","orbitRadius":8010,"name":"Abandoned Mining Station","stationType":"station_mining00"},
 			],
 		},
 
@@ -213,36 +216,34 @@
 			"addCoronalHypershunt":false,
 			"addDomainCryosleeper":false,
 			"systemBackground":"background5.jpg",
-			"fringeJumpPoint":{"orbitRadius":8000},
-			"starsInSystemCenter":{
-				"stars":[{"type":"random_star_giant"}],
-			},
+			"fringeJumpPoint":{"orbitRadius":6840},
+			"starsInSystemCenter":{"stars":[{"type":"random_star_giant"}]},
 			"orbitingBodies":[
 				{	"type":"gas_giant",
-					"orbitRadius":4000,
+					"orbitRadius":3825,
 					"radius":325,
 					"conditions":["volatiles_abundant","high_gravity","hot"],
 					"entitiesAtStablePoints":[{"type":"comm_relay"},{"type":"stable_location"},{"type":"stable_location"}],
 				},
 				{	"type":"terran",
-					"orbitRadius":5250,
+					"orbitRadius":4625,
 					"radius":175,
 					"conditions":["ruins_extensive","farmland_adequate","ore_moderate","organics_common","habitable"],
 				},
 				{	"type":"toxic",
-					"orbitRadius":6500,
+					"orbitRadius":5850,
 					"radius":150,
 					"conditions":["toxic_atmosphere","ore_rich","rare_ore_moderate","organics_common","volatiles_diffuse"],
 				},
 				{	"type":"barren",
-					"orbitRadius":7750,
+					"orbitRadius":6420,
 					"radius":120,
 					"conditions":["no_atmosphere","ore_sparse","rare_ore_sparse"],
 				},
 			],
 			"systemFeatures":[
-				{"type":"jump_point","orbitRadius":3000,"name":"Inner System Jump-point"},
-				{"type":"inactive_gate","orbitRadius":6000},
+				{"type":"jump_point","orbitRadius":3200,"name":"Inner System Jump-point"},
+				{"type":"inactive_gate","orbitRadius":5250},
 				{"type":"magnetic_field","orbitRadius":325,"focus":1,"size":200},
 				{"type":"station_research","orbitRadius":425,"focus":1},
 			],
